--- a/board_sierra/CubeMXv2/CubeMXv2.ioc
+++ b/board_sierra/CubeMXv2/CubeMXv2.ioc
@@ -1,23 +1,39 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
 CAN1.CalculateTimeQuantum=4000.0
 CAN1.IPParameters=CalculateTimeQuantum
+CAN2.CalculateTimeQuantum=4000.0
+CAN2.IPParameters=CalculateTimeQuantum
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32L4
-Mcu.IP0=CAN1
-Mcu.IP1=I2C1
-Mcu.IP10=SPI3
-Mcu.IP11=SYS
-Mcu.IP2=I2C2
-Mcu.IP3=I2C3
-Mcu.IP4=I2C4
-Mcu.IP5=NVIC
-Mcu.IP6=QUADSPI
-Mcu.IP7=RCC
-Mcu.IP8=SPI1
-Mcu.IP9=SPI2
-Mcu.IPNb=12
+Mcu.IP0=ADC1
+Mcu.IP1=CAN1
+Mcu.IP10=SPI1
+Mcu.IP11=SPI2
+Mcu.IP12=SPI3
+Mcu.IP13=SYS
+Mcu.IP14=UART4
+Mcu.IP15=UART5
+Mcu.IP16=USART1
+Mcu.IP17=USART2
+Mcu.IP18=USART3
+Mcu.IP2=CAN2
+Mcu.IP3=I2C1
+Mcu.IP4=I2C2
+Mcu.IP5=I2C3
+Mcu.IP6=I2C4
+Mcu.IP7=NVIC
+Mcu.IP8=QUADSPI
+Mcu.IP9=RCC
+Mcu.IPNb=19
 Mcu.Name=STM32L496Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14-OSC32_IN (PC14)
@@ -25,35 +41,61 @@ Mcu.Pin1=PC15-OSC32_OUT (PC15)
 Mcu.Pin10=PH1-OSC_OUT (PH1)
 Mcu.Pin11=PC0
 Mcu.Pin12=PC1
-Mcu.Pin13=PA1
-Mcu.Pin14=PA2
-Mcu.Pin15=PA6
-Mcu.Pin16=PA7
-Mcu.Pin17=PF14
-Mcu.Pin18=PF15
-Mcu.Pin19=PB13
+Mcu.Pin13=PA0
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA5
+Mcu.Pin17=PA6
+Mcu.Pin18=PA7
+Mcu.Pin19=PB10
 Mcu.Pin2=PF0
-Mcu.Pin20=PB14
-Mcu.Pin21=PB15
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13 (JTMS/SWDIO)
-Mcu.Pin25=PA14 (JTCK/SWCLK)
-Mcu.Pin26=PC10
-Mcu.Pin27=PC11
-Mcu.Pin28=PC12
-Mcu.Pin29=PG13
+Mcu.Pin20=PB11
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PB15
+Mcu.Pin24=PD8
+Mcu.Pin25=PD9
+Mcu.Pin26=PD10
+Mcu.Pin27=PD11
+Mcu.Pin28=PD12
+Mcu.Pin29=PG7
 Mcu.Pin3=PF1
-Mcu.Pin30=PG14
-Mcu.Pin31=PB3 (JTDO/TRACESWO)
-Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin30=PG8
+Mcu.Pin31=PA8
+Mcu.Pin32=PA9
+Mcu.Pin33=PA10
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13 (JTMS/SWDIO)
+Mcu.Pin37=PA14 (JTCK/SWCLK)
+Mcu.Pin38=PA15 (JTDI)
+Mcu.Pin39=PC10
 Mcu.Pin4=PF6
+Mcu.Pin40=PC11
+Mcu.Pin41=PC12
+Mcu.Pin42=PD2
+Mcu.Pin43=PD3
+Mcu.Pin44=PD4
+Mcu.Pin45=PD5
+Mcu.Pin46=PD6
+Mcu.Pin47=PG9
+Mcu.Pin48=PG10
+Mcu.Pin49=PG11
 Mcu.Pin5=PF7
+Mcu.Pin50=PG13
+Mcu.Pin51=PG14
+Mcu.Pin52=PB3 (JTDO/TRACESWO)
+Mcu.Pin53=PB5
+Mcu.Pin54=PB6
+Mcu.Pin55=PB7
+Mcu.Pin56=PB8
+Mcu.Pin57=PB9
+Mcu.Pin58=VP_SYS_VS_Systick
 Mcu.Pin6=PF8
 Mcu.Pin7=PF9
 Mcu.Pin8=PF10
 Mcu.Pin9=PH0-OSC_IN (PH0)
-Mcu.PinsNb=33
+Mcu.PinsNb=59
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L496ZGTx
@@ -70,24 +112,57 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA1.Mode=Full_Duplex_Master
-PA1.Signal=SPI1_SCK
-PA11.Mode=Master
-PA11.Signal=CAN1_RX
-PA12.Mode=Master
-PA12.Signal=CAN1_TX
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=QUADSPI_BK1_CS1
+PA0.Locked=true
+PA0.Signal=GPIO_Output
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=QUADSPI_BK1_CS2
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA10.Locked=true
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
+PA11.Locked=true
+PA11.Mode=CTS_RTS
+PA11.Signal=USART1_CTS
+PA12.Locked=true
+PA12.Mode=CTS_RTS
+PA12.Signal=USART1_RTS
 PA13\ (JTMS/SWDIO).Locked=true
 PA13\ (JTMS/SWDIO).Mode=Trace_Asynchronous_SW
 PA13\ (JTMS/SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Locked=true
 PA14\ (JTCK/SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
+PA15\ (JTDI).Locked=true
+PA15\ (JTDI).Mode=CTS_RTS
+PA15\ (JTDI).Signal=UART4_RTS
+PA2.Locked=true
 PA2.Mode=Single Bank 1
 PA2.Signal=QUADSPI_BK1_NCS
+PA5.Locked=true
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=USART1_EN
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
+PB10.Locked=true
+PB10.Mode=I2C
+PB10.Signal=I2C4_SCL
+PB11.Locked=true
+PB11.Mode=I2C
+PB11.Signal=I2C4_SDA
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -100,44 +175,113 @@ PB15.Signal=SPI2_MOSI
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO/TRACESWO).Signal=SYS_JTDO-SWO
-PC0.Mode=I2C
-PC0.Signal=I2C3_SCL
-PC1.Mode=I2C
-PC1.Signal=I2C3_SDA
-PC10.Mode=Full_Duplex_Master
-PC10.Signal=SPI3_SCK
-PC11.Mode=Full_Duplex_Master
-PC11.Signal=SPI3_MISO
-PC12.Mode=Full_Duplex_Master
-PC12.Signal=SPI3_MOSI
+PB5.Locked=true
+PB5.Mode=Slave
+PB5.Signal=CAN2_RX
+PB6.Locked=true
+PB6.Mode=Slave
+PB6.Signal=CAN2_TX
+PB7.Locked=true
+PB7.Mode=CTS_RTS
+PB7.Signal=UART4_CTS
+PB8.Locked=true
+PB8.Mode=Master
+PB8.Signal=CAN1_RX
+PB9.Locked=true
+PB9.Mode=Master
+PB9.Signal=CAN1_TX
+PC0.Locked=true
+PC0.Signal=ADCx_IN1
+PC1.Locked=true
+PC1.Signal=ADCx_IN2
+PC10.Locked=true
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Locked=true
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
+PC12.Locked=true
+PC12.Mode=Asynchronous
+PC12.Signal=UART5_TX
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=USART3_EN
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.Locked=true
+PD11.Mode=CTS_RTS
+PD11.Signal=USART3_CTS
+PD12.Locked=true
+PD12.Mode=CTS_RTS
+PD12.Signal=USART3_RTS
+PD2.Locked=true
+PD2.Mode=Asynchronous
+PD2.Signal=UART5_RX
+PD3.Locked=true
+PD3.Mode=CTS_RTS
+PD3.Signal=USART2_CTS
+PD4.Locked=true
+PD4.Mode=CTS_RTS
+PD4.Signal=USART2_RTS
+PD5.Locked=true
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.Locked=true
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
+PD8.Locked=true
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.Locked=true
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
+PF0.Locked=true
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
+PF1.Locked=true
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
+PF10.Locked=true
 PF10.Mode=Single Bank 1
 PF10.Signal=QUADSPI_CLK
-PF14.Mode=I2C
-PF14.Signal=I2C4_SCL
-PF15.Mode=I2C
-PF15.Signal=I2C4_SDA
+PF6.Locked=true
 PF6.Mode=Single Bank 1
 PF6.Signal=QUADSPI_BK1_IO3
+PF7.Locked=true
 PF7.Mode=Single Bank 1
 PF7.Signal=QUADSPI_BK1_IO2
+PF8.Locked=true
 PF8.Mode=Single Bank 1
 PF8.Signal=QUADSPI_BK1_IO0
+PF9.Locked=true
 PF9.Mode=Single Bank 1
 PF9.Signal=QUADSPI_BK1_IO1
+PG10.Locked=true
+PG10.Mode=Full_Duplex_Master
+PG10.Signal=SPI3_MISO
+PG11.Locked=true
+PG11.Mode=Full_Duplex_Master
+PG11.Signal=SPI3_MOSI
+PG13.Locked=true
 PG13.Mode=I2C
 PG13.Signal=I2C1_SDA
+PG14.Locked=true
 PG14.Mode=I2C
 PG14.Signal=I2C1_SCL
+PG7.Locked=true
+PG7.Mode=I2C
+PG7.Signal=I2C3_SCL
+PG8.Locked=true
+PG8.Mode=I2C
+PG8.Signal=I2C3_SDA
+PG9.Locked=true
+PG9.Mode=Full_Duplex_Master
+PG9.Signal=SPI3_SCK
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
@@ -193,6 +337,10 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=32000000
 RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.VCOSAI2OutputFreq_Value=32000000
+SH.ADCx_IN1.0=ADC1_IN1,IN1-Single-Ended
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN2.0=ADC1_IN2,IN2-Single-Ended
+SH.ADCx_IN2.ConfNb=1
 SPI1.CalculateBaudRate=2.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
@@ -208,6 +356,12 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
