--- a/board_sierra/CubeMX/board_sierra.ioc
+++ b/board_sierra/CubeMX/board_sierra.ioc
@@ -241,7 +241,7 @@ PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=USER2_EN
+PA8.GPIO_Label=USER_SPI2_EN
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
@@ -250,11 +250,11 @@ PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=USER4_1
+PB0.GPIO_Label=USER4_2
 PB0.Locked=true
 PB0.Signal=GPIO_Input
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=USER3_3
+PB1.GPIO_Label=USER3_2
 PB1.Locked=true
 PB1.Signal=GPIO_Input
 PB10.GPIOParameters=GPIO_Label
@@ -370,7 +370,7 @@ PC4.GPIO_Label=SPI1_CS_1
 PC4.Locked=true
 PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=USER4_2
+PC5.GPIO_Label=USER4_4
 PC5.Locked=true
 PC5.Signal=GPIO_Input
 PC6.GPIOParameters=GPIO_Label
@@ -382,15 +382,15 @@ PC7.GPIO_Label=SPI3_CS1
 PC7.Locked=true
 PC7.Signal=GPIO_Output
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=USER1_EN
+PC8.GPIO_Label=USER_SPI3_EN
 PC8.Locked=true
 PC8.Signal=GPIO_Output
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=USER_SPI1_EN
+PC9.GPIO_Label=USER1_EN
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PD0.GPIOParameters=GPIO_Label
-PD0.GPIO_Label=USER_SPI2_EN
+PD0.GPIO_Label=USER2_EN
 PD0.Locked=true
 PD0.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
@@ -463,7 +463,7 @@ PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
 PE0.GPIOParameters=GPIO_Label
-PE0.GPIO_Label=USER6_3
+PE0.GPIO_Label=USER6_2
 PE0.Locked=true
 PE0.Signal=GPIO_Input
 PE1.GPIOParameters=GPIO_Label
@@ -471,31 +471,31 @@ PE1.GPIO_Label=USER6_4
 PE1.Locked=true
 PE1.Signal=GPIO_Input
 PE10.GPIOParameters=GPIO_Label
-PE10.GPIO_Label=WATCHDOG
+PE10.GPIO_Label=FAULT
 PE10.Locked=true
 PE10.Signal=GPIO_Output
 PE11.GPIOParameters=GPIO_Label
-PE11.GPIO_Label=GLO_EN
+PE11.GPIO_Label=CPU_EN
 PE11.Locked=true
 PE11.Signal=GPIO_Output
 PE12.GPIOParameters=GPIO_Label
-PE12.GPIO_Label=FAULT
+PE12.GPIO_Label=MODE
 PE12.Locked=true
 PE12.Signal=GPIO_Input
 PE13.GPIOParameters=GPIO_Label
-PE13.GPIO_Label=SYNC
+PE13.GPIO_Label=WATCHDOG
 PE13.Locked=true
 PE13.Signal=GPIO_Input
 PE14.GPIOParameters=GPIO_Label
-PE14.GPIO_Label=MODE
+PE14.GPIO_Label=SYNC
 PE14.Locked=true
 PE14.Signal=GPIO_Input
 PE15.GPIOParameters=GPIO_Label
-PE15.GPIO_Label=CPU_EN
+PE15.GPIO_Label=GLO_EN
 PE15.Locked=true
 PE15.Signal=GPIO_Output
 PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=USER6_2
+PE2.GPIO_Label=USER6_1
 PE2.Locked=true
 PE2.Signal=GPIO_Input
 PE3.GPIOParameters=GPIO_Label
@@ -503,27 +503,27 @@ PE3.GPIO_Label=USER5_3
 PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=USER5_2
+PE4.GPIO_Label=USER5_1
 PE4.Locked=true
 PE4.Signal=GPIO_Input
 PE5.GPIOParameters=GPIO_Label
-PE5.GPIO_Label=USER6_1
+PE5.GPIO_Label=USER6_3
 PE5.Locked=true
 PE5.Signal=GPIO_Input
 PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=USER4_4
+PE6.GPIO_Label=USER4_3
 PE6.Locked=true
 PE6.Signal=GPIO_Input
 PE7.GPIOParameters=GPIO_Label
-PE7.GPIO_Label=SPI3_CS2
+PE7.GPIO_Label=USER2_1
 PE7.Locked=true
 PE7.Signal=GPIO_Output
 PE8.GPIOParameters=GPIO_Label
-PE8.GPIO_Label=USER2_1
+PE8.GPIO_Label=USER2_4
 PE8.Locked=true
 PE8.Signal=GPIO_Input
 PE9.GPIOParameters=GPIO_Label
-PE9.GPIO_Label=USER2_2
+PE9.GPIO_Label=SPI2_CS2
 PE9.Locked=true
 PE9.Signal=GPIO_Input
 PF0.GPIOParameters=GPIO_Label
@@ -542,35 +542,35 @@ PF10.Locked=true
 PF10.Mode=Single Bank 1
 PF10.Signal=QUADSPI_CLK
 PF11.GPIOParameters=GPIO_Label
-PF11.GPIO_Label=USER3_1
+PF11.GPIO_Label=USER3_3
 PF11.Locked=true
 PF11.Signal=GPIO_Input
 PF12.GPIOParameters=GPIO_Label
-PF12.GPIO_Label=USER3_2
+PF12.GPIO_Label=USER3_1
 PF12.Locked=true
 PF12.Signal=GPIO_Input
 PF13.GPIOParameters=GPIO_Label
-PF13.GPIO_Label=SPI2_CS2
+PF13.GPIO_Label=USER1_1
 PF13.Locked=true
 PF13.Signal=GPIO_Output
 PF14.GPIOParameters=GPIO_Label
-PF14.GPIO_Label=USER1_2
+PF14.GPIO_Label=SPI3_CS2
 PF14.Locked=true
 PF14.Signal=GPIO_Input
 PF15.GPIOParameters=GPIO_Label
-PF15.GPIO_Label=USER1_4
+PF15.GPIO_Label=USER1_2
 PF15.Locked=true
 PF15.Signal=GPIO_Input
 PF3.GPIOParameters=GPIO_Label
-PF3.GPIO_Label=USER4_3
+PF3.GPIO_Label=USER4_1
 PF3.Locked=true
 PF3.Signal=GPIO_Input
 PF4.GPIOParameters=GPIO_Label
-PF4.GPIO_Label=USER5_4
+PF4.GPIO_Label=USER5_2
 PF4.Locked=true
 PF4.Signal=GPIO_Input
 PF5.GPIOParameters=GPIO_Label
-PF5.GPIO_Label=USER5_1
+PF5.GPIO_Label=USER5_4
 PF5.Locked=true
 PF5.Signal=GPIO_Input
 PF6.GPIOParameters=GPIO_Label
@@ -594,11 +594,11 @@ PF9.Locked=true
 PF9.Mode=Single Bank 1
 PF9.Signal=QUADSPI_BK1_IO1
 PG0.GPIOParameters=GPIO_Label
-PG0.GPIO_Label=USER1_1
+PG0.GPIO_Label=USER1_4
 PG0.Locked=true
 PG0.Signal=GPIO_Input
 PG1.GPIOParameters=GPIO_Label
-PG1.GPIO_Label=USER2_4
+PG1.GPIO_Label=USER2_2
 PG1.Locked=true
 PG1.Signal=GPIO_Input
 PG10.GPIOParameters=GPIO_Label
